trunk/Archive/b1b0f274a4cda3f6f05bf29fe4af1cac-466ab41730636b95f90e97f463ae969b/output
In file included from main.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/regex:34:
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support for the \
 ^
main.cpp:7:23: error: use of undeclared identifier 'R'
    std::string str = R"d(Would "you" like to have responses to your "questions" sent to you via email?)d";
                      ^
main.cpp:8:10: error: no member named 'regex' in namespace 'std'
    std::regex rgx(R"(\"(\w+)\")");
    ~~~~~^
main.cpp:9:10: error: no template named 'smatch' in namespace 'std'; did you mean 'mismatch'?
    std::smatch match;
    ~~~~~^~~~~~
         mismatch
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/stl_algobase.h:1160:5: note: 'mismatch' declared here
    mismatch(_InputIterator1 __first1, _InputIterator1 __last1,
    ^
main.cpp:9:10: error: no type named 'smatch' in namespace 'std'
    std::smatch match;
    ~~~~~^
main.cpp:16:9: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
    for(auto& i : strings) {
        ^
main.cpp:16:17: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
    for(auto& i : strings) {
                ^
main.cpp:17:17: error: no member named 'regex_match' in namespace 'std'
        if(std::regex_match(i,match, rgx)) {
           ~~~~~^
main.cpp:18:18: error: no type named 'ssub_match' in namespace 'std'
            std::ssub_match submatch = match[1];
            ~~~~~^
2 warnings and 7 errors generated.
